# PyAnonWebBot

./: .gitignore  AnonWebBot.py  README.md  pyproject.toml  requirements.txt  test_ddg.json
_requests/: builder.py
_selenium/: chrome.py  chromium.py  edge.py  firefox.py  ie.py  opera.py  selenium_builder.py
_selenium/examples/: test_ddg.json  user_agent.json  what_is_my_ip.json  what_is_my_user_agent.json
config/: conf.py
utils/: bs4_parser.py  fake_user_agent.py  help_format.py  proxy_generator.py  rand_user_agent.py
