[tool.poetry]
name = "rkt_pyanonwebbot"
version = "0.1.1"
description = "A Web Bot that helps to anonymize data."
authors = ["rkt231"]
license = "GNU LGPL 2.1"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = ">=4.9.3"
random-user-agent = ">=1.0.1"
requests = ">=2.26.0"
requests-html = ">=0.10.0"
requestsexceptions = ">=1.4.0"
selenium = ">=1.4.0"
stem = ">=1.8.0"
idna = ">=3.3"
urllib3 = ">=1.26.6"
selenium-wire = ">=4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
